--- a/src/components/ImageGallery.css
+++ b/src/components/ImageGallery.css
@@ -3,6 +3,8 @@
   width: 100%;
   max-width: none;
   margin: 0;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .gallery-tabs {
@@ -67,15 +69,20 @@
 .masonry-grid {
   display: flex;
   margin-left: -2px;
+  width: calc(100% + 2px);
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .masonry-grid_column {
   padding-left: 2px;
+  box-sizing: border-box;
 }
 
 .masonry-grid_column > * {
   display: block;
   margin-bottom: 2px;
+  box-sizing: border-box;
 }
 
 /* Reset all border radius for desktop */
